@@ -87,7 +87,7 @@
                </void> 
                <void method="setProperty"> 
                 <string>$rowSpecs</string> 
-                <string>10dlu, linegap, default, linegap, default, linegap, default, linegap, 10dlu, linegap, default, linegap, default, linegap, default</string> 
+                <string>10dlu, linegap, default, linegap, default, linegap, default, linegap, default, linegap, 10dlu, linegap, default, linegap, default, linegap, default</string> 
                </void> 
               </object> 
               <void property="name"> 
@@ -135,7 +135,7 @@
                 </void> 
                 <void method="setProperty"> 
                  <string>gridY</string> 
-                 <int>5</int> 
+                 <int>7</int> 
                 </void> 
                </object> 
               </void> 
@@ -154,7 +154,7 @@
                 </void> 
                 <void method="setProperty"> 
                  <string>gridY</string> 
-                 <int>5</int> 
+                 <int>7</int> 
                 </void> 
                 <void method="setProperty"> 
                  <string>gridWidth</string> 
@@ -188,7 +188,7 @@
                 </void> 
                 <void method="setProperty"> 
                  <string>gridY</string> 
-                 <int>7</int> 
+                 <int>9</int> 
                 </void> 
                </object> 
               </void> 
@@ -205,7 +205,13 @@
                    <string>Create a new document</string> 
                   </void> 
                   <void method="addElement"> 
-                   <string>Open the last used document</string> 
+                   <string>Open the last opened document</string> 
+                  </void> 
+                  <void method="addElement"> 
+                   <string>Open the last saved document</string> 
+                  </void> 
+                  <void method="addElement"> 
+                   <string>Open all opened documents when ANTLRWorks was closed</string> 
                   </void> 
                  </object> 
                 </void> 
@@ -222,6 +228,33 @@
                 <void method="setProperty"> 
                  <string>gridY</string> 
                  <int>3</int> 
+                </void> 
+                <void method="setProperty"> 
+                 <string>gridWidth</string> 
+                 <int>3</int> 
+                </void> 
+               </object> 
+              </void> 
+              <void method="add"> 
+               <object class="com.ktauber.form.model.FormComponent"> 
+                <string>javax.swing.JCheckBox</string> 
+                <void method="setProperty"> 
+                 <string>text</string> 
+                 <string>Restore project&apos;s windows position and size</string> 
+                </void> 
+                <void property="name"> 
+                 <string>restoreWindowsBoundButton</string> 
+                </void> 
+               </object> 
+               <object class="com.ktauber.form.model.FormLayoutConstraints"> 
+                <class>com.jgoodies.forms.layout.CellConstraints</class> 
+                <void method="setProperty"> 
+                 <string>gridX</string> 
+                 <int>5</int> 
+                </void> 
+                <void method="setProperty"> 
+                 <string>gridY</string> 
+                 <int>5</int> 
                 </void> 
                 <void method="setProperty"> 
                  <string>gridWidth</string> 
@@ -255,7 +288,7 @@
                 </void> 
                 <void method="setProperty"> 
                  <string>gridY</string> 
-                 <int>7</int> 
+                 <int>9</int> 
                 </void> 
                </object> 
               </void> 
@@ -292,7 +325,7 @@
                 </void> 
                 <void method="setProperty"> 
                  <string>gridY</string> 
-                 <int>7</int> 
+                 <int>9</int> 
                 </void> 
                 <void method="setProperty"> 
                  <string>gridWidth</string> 
@@ -319,7 +352,7 @@
                 </void> 
                 <void method="setProperty"> 
                  <string>gridY</string> 
-                 <int>11</int> 
+                 <int>13</int> 
                 </void> 
                </object> 
               </void> 
@@ -342,7 +375,7 @@
                 </void> 
                 <void method="setProperty"> 
                  <string>gridY</string> 
-                 <int>11</int> 
+                 <int>13</int> 
                 </void> 
                 <void method="setProperty"> 
                  <string>gridWidth</string> 
@@ -369,7 +402,7 @@
                 </void> 
                 <void method="setProperty"> 
                  <string>gridY</string> 
-                 <int>13</int> 
+                 <int>15</int> 
                 </void> 
                 <void method="setProperty"> 
                  <string>gridWidth</string> 
